# india-policy-tracker

./: .gitignore  LICENSE  README.md  astro.config.mjs  feeds.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  update-policies.yml
data/: budget_allocations.json  historical_policies.json  historical_seed.json  meta.json  parliament_sessions.json  policies.json  policy_continuity.json  sectors.json  sources.json  state_governments.json  state_policies.json
policydhara/: __init__.py  classifier.py  cli.py  models.py  store.py
policydhara/fetchers/: __init__.py  base.py  rss.py  scraper.py
scripts/: classifier.py  fetch_all.py  fetch_rss.py  fetch_scrape.py  requirements.txt  send_newsletter.py
src/components/: Insights.astro  NewsletterBar.astro  PolicyCard.astro  PolicyContinuity.astro  PolicyIntelligence.astro  PolicyTimeline.astro  ShareBar.astro  Sidebar.astro  StatsBar.astro
src/content/policies/: 000359c5922e.json  00086d8209d0.json  00169b6d0468.json  0022fbfbae75.json  00339bdaf2cf.json  0033b0501738.json  003bb4f80d20.json  003e6d1a442e.json  00573c89134d.json  00605d54da97.json  006b3b606782.json  006cea155da0.json  00735e1c64eb.json  0088b8357f85.json  009122acf80e.json  00916bed9934.json  009407a7aae3.json  00a17f3f6e5c.json  00a8d3684071.json  00a964793c8e.json  00b28329ac43.json  00b5f0ac23aa.json  (+7346 more)
src/layouts/: Base.astro
src/lib/: analytics.ts  data.ts  enrich.ts
src/pages/: 404.astro  about.astro  api.astro  budget.astro  compare.astro  continuity.astro  index.astro  intelligence.astro  parliament.astro  rss.xml.ts  search.astro
src/styles/: global.css
tests/: test_policydhara.py
(+7 files in other folders)
